# Imago

./: CHANGELOG.md  Imago.cabal  LICENSE  README.md  Setup.hs  flake.nix  imago.cabal  imago.pc  setup.sh
Core/: Cargo.toml  build.rs  cbindgen.toml  imago.pc.in
Core/include/: libimago.h
Core/src/: error.rs  ffi.rs  formats.rs  info.rs  lib.rs  operations.rs  request.rs
cbits/: libimago.h
src/Graphics/: Imago.hs  LibImago.hs
src/Graphics/Imago/: Info.hs
src/Graphics/Interface/: Raw.hsc
test/: Main.hs
